# examples

./: .gitignore  README.md  package-lock.json  pom.xml
.github/: CODEOWNERS
.github/workflows/: clients.yaml  flink.yaml
aop/amqp091-go/: README.md  connect-by-oauth2.go  connect-by-token.go  go.mod  go.sum  simple-producer.go
aop/amqp091-go/basic-auth-consumer/: basic-auth-consumer.go
aop/amqp091-go/basic-auth-producer/: basic-auth-producer.go
aop/amqp091-go/consumer/: oauth-consumer.go  plain-consumer.go
aop/amqp091-go/general/: connect-by-oauth2.go  connect-by-plain.go  connect-by-token.go  simple-consumer.go
aop/amqp091-go/oauth2/: client-credentials.json
aop/amqp091-go/producer/: oauth-producer.go  plain-producer.go
buildtools/: pom.xml
clients/: pom.xml
clients-schema-registry/java/: pom.xml
clients/buildtools/: pom.xml
clients/pubsub/: pom.xml
clients/pubsub/examples/: acknowledgement.md  dead-letter-topic.md  seek.md  (+5 more)
clients/schema/: README.md  pom.xml
cloud/: README.md
cloud/c#/: TokenConsumer.cs  TokenProducer.cs
cloud/cpp/: CMakeLists.txt  ConnectByOAuth2.cc  ConnectByToken.cc  README.md  SampleConsumer.cc  SampleProducer.cc  connectByOAuth2.cc
cloud/csharp/: README.md
cloud/go/: README.md  connectByToken.go  consumer.go  go.mod  producer.go  sampleConsumer.go
cloud/java/: .gitignore  README.md  pom.xml
cloud/kafka/: go.mod
cloud/kafka_go/: build.sh
cloud/node/: README.md  connect_by_oauth2.js  connect_by_toekn.js  sample_consumer.js  sample_consumer_by_oauth2.js  sample_producer.js  sample_producer_by_oauth2.js
cloud/pulsar-admin/: README.md
cloud/pulsar-client/: README.md
cloud/pulsarctl/: ConnectByOAuth2.go  README.md  go.sum
cloud/python/: ConnectByToken.py  README.md  SampleConsumer.py  SampleProducer.py
cloud/rust/: TokenConsumer.rs  TokenProducer.rs
cloud/spring/: TokenApplication.yml
cloud/transaction/: README.md
cloud_kafka/: README.md
cloud_kafka/confluent-kafka-go/: README.md  go.mod  go.sum
cloud_kafka/confluent-kafka-python/: README.md  avro_consumer.py  avro_producer.py  consumer.py  producer.py  pyproject.toml  sncloud.ini
cloud_kafka/librdkafka/: .clang-format  .gitignore  CMakeLists.txt  README.md  avro_consumer.cc  avro_producer.cc  config.h  config_parser.h  configure  sncloud.ini  utils.h  vcpkg.json
cloud_kafka/sarama/: README.md  cleanup.sh  go.mod  go.sum
common/: pom.xml
functions/python/: README.md  test-producer-consumer.py
kop/: README.md
kop/java/: README.md  pom.xml
nyctaxi/taxidata/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
platform/: README.md  demo_cert_manager_acm.yaml  demo_cert_manager_public.yaml  demo_cert_manager_self.yaml  istio.yaml  local-volume-provisioner.yaml  values_cluster.yaml
pubsub/: README.md
pubsub/examples/: dead-letter-topic.md  delayed-message.md  idempotent-producer.md  single-partition-atomic-writes.md
pulsar-flink/: README.md  pom.xml
pulsar-flink/go/: go.mod  go.sum
pulsar/pubsub/: pom.xml
schema/: README.md  pom.xml
schema/examples/: produce-avro-records-auto-consume-messages.md  produce-consume-avro-messages.md  produce-generic-records-consume-avro-messages.md
spring-pulsar/: .gitignore  README.md  pom.xml
terraform/basic/: .gitignore  README.md  main.tf  variables.tf
terraform/serverless/: README.md  main.tf  variables.tf
tls/: README.md
tls/c#/: OAuth2Consumer.cs  OAuth2Producer.cs
tls/cpp/: ConnectByOAuth2.cc
tls/go/: README.md  connectByOAuth2.go  connectByToken.go  go.sum  sampleProducer.go
tls/java/: README.md  pom.xml
tls/node/: README.md
tls/pulsarctl/: ConnectByOAuth2.go  README.md  go.mod
tls/python/: OAuth2Consumer.py  OAuth2Producer.py  SampleConsumer.py  SampleProducer.py
tls/rust/: OAuth2Consumer.rs  OAuth2Producer.rs  TokenConsumer.rs
tls/spring/: Consumer.java  OAuth2Application.yml  Producer.java
(+188 files in other folders)
